--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
-Pastas onde o python esta.txt
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+sdist/
+*.egg-info/
+
+# Environments
+.env
 .venv
+env/
+venv/
